2005-11-20  Russell Bryant <russell@digium.com>

	* Makefile apps/Makefile: Fix 'make install' for Solaris. (issue #5775)

	* apps/app_record.c: Don't leak a frame if writing it to the file fails. (issue #5787)

	* Makefile: Create the monitor spool directory when the other spool directories are created.

	* pbx.c.c: Remove some useless checks and unnecessary calls to ast_strlen_zero(). (issue #5805)

	* cli.c: Remove some unnecessary calls to ast_strlen_zero(). (issue #5804)

	* channels/chan_oss.c configs/oss.conf.sample: Add the ability to set callerid in oss.conf. 

	* channels/chan_sip.c channels/chan_iax2.c: Change warning messages about the number of scheduled events happening all at once to debug messages. (issue #5794)

2005-11-20  Josh Roberson <josh@asteriasgi.com>

	* pbx/pbx_spool.c: Fix crash in spooler if set/setvar declared incorrectly. (issue #5806)

	* apps/app_meetme.c: fix 'X' option in MeetMe, with slight modification. (issue #5773)

	* apps/app_voicemail.c: Make sure we're copying the read digits when calling voicemail without a box. (issue #5774)

	* apps/app_md5.c: Fix conditional jump option.

	* apps/app_controlplayback.c: Fix conditional jump option.

	* apps/app_hasnewvoicemail.c: Fix conditional jump option to jump properly, also correct a small typo in the description. (issue #5795)

	* channels/chan_iax2.c: Fix output of iax2 show peer <peer> (issue #5792)

	* UPGRADE.txt: Adjust note for naming conventions of iax2 channels. (issue #5792)

	* res/res_musiconhold.c: Correct typo in ast_copy_string() for class->mode.  (issue #5803)

2005-11-19  Josh Roberson <josh@asteriasgi.com>

	* channels/Makefile: Put chan_oss back into the default build. (issue #5799)

	* funcs/func_enum.c: Fix long text description causing cosmetic defect on module load. (issue #5791)

2005-11-19  Russell Bryant  <russell@digium.com>

	* app/app_echo.c: Update application description to be a bit more accurate, and clean up a little bit of code formatting
